--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 
 Python/pgm/backup_20250114/
+Python/materials
+Python/pgm/machineLearning/model
 R/pgm/backup_20250114/
 R/materials
+R/pgm/figure
+SAS/Program/backup_20250214/
 SAS/materials
-Python/materials
+
 .lintr
