--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 
+Python/pgm/taobao
 Python/pgm/backup_20250114/
 Python/materials
 Python/pgm/machineLearning/model
+R/pgm/taobao
 R/pgm/backup_20250114/
 R/materials
 R/pgm/figure
